tests/baselines/reference/noStrictGenericChecks.errors.txt
error TS5101: Option 'noStrictGenericChecks' is deprecated and will stop functioning in TypeScript 5.5. Specify compilerOption '"ignoreDeprecations": "5.0"' to silence this error.
noStrictGenericChecks.ts(5,5): error TS2322: Type 'B' is not assignable to type 'A'.
  Types of parameters 'y' and 'y' are incompatible.
    Type 'U' is not assignable to type 'T'.
      'T' could be instantiated with an arbitrary type which could be unrelated to 'U'.


!!! error TS5101: Option 'noStrictGenericChecks' is deprecated and will stop functioning in TypeScript 5.5. Specify compilerOption '"ignoreDeprecations": "5.0"' to silence this error.
==== noStrictGenericChecks.ts (1 errors) ====
    type A = <T, U>(x: T, y: U) => [T, U];
    type B = <S>(x: S, y: S) => [S, S];
    
    function f(a: A, b: B) {
        a = b;  // Error disabled here
        ~
!!! error TS2322: Type 'B' is not assignable to type 'A'.
!!! error TS2322:   Types of parameters 'y' and 'y' are incompatible.
!!! error TS2322:     Type 'U' is not assignable to type 'T'.
!!! error TS2322:       'T' could be instantiated with an arbitrary type which could be unrelated to 'U'.
!!! related TS2208 noStrictGenericChecks.ts:1:14: This type parameter might need an `extends T` constraint.
        b = a;  // Ok
    }
    